Kubernetes/FireflyIII/yamls/fireflyIII.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: firefly
  labels:
    name: firefly
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: firefly
  labels:
    app: firefly
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html/storage/upload
              name: firefly-data
      volumes:
        - name: firefly-data
          persistentVolumeClaim:
            claimName: firefly-data
---
kind: Service
metadata:
  name: firefly
  namespace: firefly
  labels:
    app: firefly
apiVersion: v1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: firefly
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: firefly-https-redirect
  namespace: firefly
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: firefly-security
  namespace: firefly
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-websecure
  namespace: firefly
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`firefly.domain.com`)
      services:
        - name: firefly
          port: 80
          serversTransport: firefly-transport
      middlewares:
        - name: firefly-security
  tls:
    secretName: firefly-domain-com
    options:
      name: firefly-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-web
  namespace: firefly
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`firefly.domain.com`)
      services:
        - name: firefly
          port: 80
      middlewares:
        - name: firefly-https-redirect
